@startuml implementacao
left to right direction
title Diagrama de Classes de Implementação - Exemplo

' Entidades principais com tipos específicos
class Usuario {
    -id: Long
    -login: String
    -senha: String
    -nomeCompleto: String
    -dataDeNascimento: LocalDate
}

class PerfilUsuario {
    -foto: byte[]
    -telefone: String
    -endereco: String
    -usuario: Usuario
}

class Estudante {
    -matricula: String
}

class Professor {
    -identificacaoFuncional: String
}

class Disciplina {
    -id: Long
    -codigo: String
    -titulo: String
    -ementa: String
}

class Turma {
    -id: Long
    -codigo: String
    -alunosMatriculados: Integer
    -vagasDisponiveis: Integer
    -disciplina: Disciplina
    -professor: Professor
}

class Matricula {
    -id: Long
    -status: String
    -estudante: Estudante
    -turma: Turma
}

' Relacionamentos UML corretos
' Relacionamento 1:1: Usuario possui PerfilUsuario
Usuario "1" -- "0..1" PerfilUsuario : possui >

' Herança: Usuario é superclasse de Estudante e Professor
Usuario <|-- Estudante
Usuario <|-- Professor

' Associação simples: Turma tem referência para Disciplina
Disciplina "1" -- "0..*" Turma : oferece >

' Relacionamento Professor ministra Turma
Professor "1" -- "0..*" Turma : ministra >

' Associações através da classe Matricula
Estudante "1" -- "0..*" Matricula : realiza >
Turma "1" -- "0..*" Matricula : < possui

@enduml

@enduml